--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
     <a></a>
     <h1>Hi</h1>
+    <nav>
+        <a href="./products.html">Products</a> |
+        <a href="/css/">CSS</a> |
+        <a href="/js/">JavaScript</a> |
+        <a href="/python/">Python</a>
+    </nav>
+
 
 </body>
 
