--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 
 <body>
-    <a></a>
-    <h1>Hi</h1>
-    <nav>
-        <a href="./products.html">Products</a> |
-        <a href="/css/">CSS</a> |
-        <a href="/js/">JavaScript</a> |
-        <a href="/python/">Python</a>
-    </nav>
+    <div class="header">
+        <nav>
+            <a href="./pages/products.html">Products</a> |
+            <a href="./pages/product_details.html">Product Details</a> |
+            <a href="./pages/shop.html">Shop</a> |
+            <a href="./pages/contact.html">Contact Us</a>
+        </nav>
+    </div>
+
+    <h1>Welcome to our website!</h1>
+
 
 
 </body>
