Added basic header stuff

--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
 <body>
     <div class="header">
         <nav>
-            <a href="./pages/products.html">Products</a> |
-            <a href="./pages/product_details.html">Product Details</a> |
-            <a href="./pages/shop.html">Shop</a> |
-            <a href="./pages/contact.html">Contact Us</a>
+            <button class="button">
+                <p>Products</p>
+            </button>
+            <button class="button">
+                <p>Product Details</p>
+            </button>
+            <button class="button">
+                <p>Shop</p>
+            </button>
+            <button class="button">
+                <p>Contact Us</p>
+            </button>
+
+
         </nav>
     </div>
 
