--- a/index.html
+++ b/index.html
@@ -5,34 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="styles/general.css">
+    <script defer src="scripts/script.js"></script>
+
 </head>
 
 <body>
-    <div class="header">
-        <nav>
-            <button class="button">
-                <p>Products</p>
-            </button>
-            <button class="button">
-                <p>Product Details</p>
-            </button>
-            <button class="button">
-                <p>Shop</p>
-            </button>
-            <button class="button">
-                <p>Contact Us</p>
-            </button>
-
-
-        </nav>
-    </div>
-
+    <iframe src="pages/navbar.html" class="navbar"></iframe>
     <h1>Welcome to our website!</h1>
-
-
-
 </body>
 
 </html>
