--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
+    <link rel="stylesheet" href="../styles/general.css">
+</head>
+
+<body>
+    <iframe src="navbar.html" class="navbar"></iframe>
     <p> This is a description of the assignment and the class the project was developed in</p>
     <p>These were our sources:
         <a href=""></a>
@@ -28,11 +33,6 @@
             <td> </td>
         </tr>
     </table>
-
-</head>
-
-<body>
-
 </body>
 
 </html>
