--- a/pages/shop.html
+++ b/pages/shop.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Description</title>
+    <link rel="stylesheet" href="../styles/general.css">
+</head>
+
+<body>
+    <iframe src="navbar.html" class="navbar"></iframe>
     <p>This is a description.</p>
 
     <table>
@@ -25,10 +30,6 @@
                 </a></td>
         </tr>
     </table>
-</head>
-
-<body>
-
 </body>
 
 </html>
