--- a/pages/products.html
+++ b/pages/products.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/general.css">
 </head>
 
 <body>
+    <iframe src="./navbar.html" class="navbar"></iframe>
     <a>Completely appropriate message</a>
 </body>
 
