Shit navbar styling
AAAAAAAAAAAAAAA
This looks like shit και εφαγα παρα πολυ ωρα. WHATEVER

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -2,20 +2,22 @@
     <link rel="stylesheet" href="../styles/navbar.css">
 </head>
 
-<nav>
-    <button class="button" onclick="window.parent.location.href='./products.html'">
-        <p>Products</p>
-    </button>
-    <button class="button" onclick="window.parent.location.href='./product_details.html'">
-        <p>Product Details</p>
-    </button>
-    <button class="button" onclick="window.parent.location.href='../index.html'">
-        <p>Home</p>
-    </button>
-    <button class="button" onclick="window.parent.location.href='./shop.html'">
-        <p>Shop</p>
-    </button>
-    <button class="button" onclick="window.parent.location.href='./contact.html'">
-        <p>Contact Us</p>
-    </button>
-</nav>
+<body>
+    <nav>
+        <button class="button" onclick="window.parent.location.href='./products.html'">
+            <p>Products</p>
+        </button>
+        <button class="button" onclick="window.parent.location.href='./product_details.html'">
+            <p>Product Details</p>
+        </button>
+        <button class="button" onclick="window.parent.location.href='../index.html'">
+            <p>Home</p>
+        </button>
+        <button class="button" onclick="window.parent.location.href='./shop.html'">
+            <p>Shop</p>
+        </button>
+        <button class="button" onclick="window.parent.location.href='./contact.html'">
+            <p>Contact Us</p>
+        </button>
+    </nav>
+</body>
