--- a/pages/products.html
+++ b/pages/products.html
@@ -10,7 +10,7 @@
 
 <body>
     <iframe src="./navbar.html" class="navbar"></iframe>
-    <a>Completely appropriate message</a>
+    <p>Completely appropriate message</p>
 </body>
 
 </html>
