Added and styled footer
-Opened a new issue on GH web
-Changed position of "Home" in navbar
-Added a footer in every page
-Styled the footer in an unimaginably complex way, pls don't be mad, open to modifications

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 <body>
     <iframe src="pages/navbar.html" class="navbar"></iframe>
     <h1>Welcome to our website!</h1>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <p>&copy; 2024-2025</p>
+            </div>
+            <div>
+                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
