--- a/pages/shop.html
+++ b/pages/shop.html
@@ -30,6 +30,17 @@
                 </a></td>
         </tr>
     </table>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <p>&copy; 2024-2025</p>
+            </div>
+            <div>
+                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
