--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,6 +33,17 @@
             <td> </td>
         </tr>
     </table>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <p>&copy; 2024-2025</p>
+            </div>
+            <div>
+                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
