--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -11,6 +11,17 @@
 <body>
     <iframe src="./navbar.html" class="navbar"></iframe>
     <p>Δεν έχω κάνει τίποτα εδώ</p>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <p>&copy; 2024-2025</p>
+            </div>
+            <div>
+                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
