--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <iframe src="pages/navbar.html" class="navbar"></iframe>
     <h1>Welcome to our website!</h1>
 
+    <div class="banner">
+        <div class="banner-images">
+            <img src="pictures/banner_pic_1_students.jpg" alt="Students">
+            <img src="pictures/banner_pic_2_students.jpg" alt="Students">
+        </div>
+    </div>
+
     <footer>
         <div class="footer-container">
             <div class="footer-left">
