--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -13,8 +13,8 @@
         <button class="button" onclick="window.parent.location.href='./product_details.html'">
             <p>Product Details</p>
         </button>
-        <button class="button" onclick="window.parent.location.href='./shop.html'">
-            <p>Shop</p>
+        <button class="button" onclick="window.parent.location.href='./koinothta.html'">
+            <p>Κοινότητα</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./contact.html'">
             <p>Contact Us</p>
