Made code complicaterer
Added a bunch of stuff so that there isn't extra space in the iframes and so that they are at the top and bottom of the page.

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../styles/general.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <script defer src="../scripts/iframe_script_footer.js"></script>
 </head>
 
 <body>
-    <iframe src="./navbar.html" class="navbar"></iframe>
-    <p>Completely appropriate message</p>
-
     <footer>
         <div class="footer-container">
             <div class="footer-left">
@@ -23,5 +15,3 @@
         </div>
     </footer>
 </body>
-
-</html>
