--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
     <link rel="stylesheet" href="../styles/general.css">
+    <script defer src="../scripts/script.js"></script>
 </head>
 
 <body>
-    <iframe src="navbar.html" class="navbar"></iframe>
+    <iframe src="navbar.html" class="navbar" id="navbar_iframe"></iframe>
     <p> This is a description of the assignment and the class the project was developed in</p>
     <p>These were our sources:
         <a href=""></a>
@@ -33,17 +34,7 @@
             <td> </td>
         </tr>
     </table>
-
-    <footer>
-        <div class="footer-container">
-            <div class="footer-left">
-                <p>&copy; 2024-2025</p>
-            </div>
-            <div>
-                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
-            </div>
-        </div>
-    </footer>
+    <iframe src="footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
 
 </html>
