--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="../styles/navbar.css">
+    <script defer src="../scripts/iframe_script_navbar.js"></script>
 </head>
 
 <body>
@@ -7,11 +8,11 @@
         <button class="button" onclick="window.parent.location.href='../index.html'">
             <p>Home</p>
         </button>
-        <button class="button" onclick="window.parent.location.href='./products.html'">
-            <p>Products</p>
+        <button class="button" onclick="window.parent.location.href='./classes.html'">
+            <p>Classes</p>
         </button>
-        <button class="button" onclick="window.parent.location.href='./product_details.html'">
-            <p>Product Details</p>
+        <button class="button" onclick="window.parent.location.href='./class_details.html'">
+            <p>Class Details</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./shop.html'">
             <p>Shop</p>
