--- a/pages/shop.html
+++ b/pages/shop.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Description</title>
     <link rel="stylesheet" href="../styles/general.css">
+    <script defer src="../scripts/script.js" id="navbar_iframe"></script>
 </head>
 
 <body>
@@ -31,16 +32,7 @@
         </tr>
     </table>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-left">
-                <p>&copy; 2024-2025</p>
-            </div>
-            <div>
-                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
-            </div>
-        </div>
-    </footer>
+    <iframe src="./footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
 
 </html>
