Actually merged the two changes

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website</title>
     <link rel="stylesheet" href="styles/general.css">
-    <script defer src="script.js"></script>
+    <script defer src="./scripts/script.js"></script>
 
 </head>
 
 <body>
-    <iframe src="pages/navbar.html" class="navbar"></iframe>
+    <iframe src="pages/navbar.html" class="navbar" id="navbar_iframe"></iframe>
     <h1>Welcome to our website!</h1>
 
     <div class="banner">
@@ -21,16 +21,7 @@
         </div>
     </div>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-left">
-                <p>&copy; 2024-2025</p>
-            </div>
-            <div>
-                <p><a href="">ΓΕΩΡΓΙΟΣ ΦΙΤΙΚΙΔΗΣ</a> | <a href="">ΙΦΙΓΕΝΕΙΑ ΡΑΠΤΗ</a></p>
-            </div>
-        </div>
-    </footer>
+    <iframe src="pages/footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
 
 </html>
