--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -12,10 +12,10 @@
 <body>
     <nav>
         <button class="button" onclick="window.parent.location.href='../index.html'">
-            <p>Home</p>
+            <p>Αρχική</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./classes.html'">
-            <p>Classes</p>
+            <p>Μαθήματα</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./class_details.html'">
             <p>Class Details</p>
@@ -24,7 +24,7 @@
             <p>Κοινότητα</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./contact.html'">
-            <p>Contact Us</p>
+            <p>Επικοινωνία</p>
         </button>
     </nav>
 </body>
