--- a/pages/koinothta.html
+++ b/pages/koinothta.html
@@ -386,7 +386,7 @@
                 <td>ΦΑΡΜΑΚΕΥΤΙΚΗΣ</td>
             </tr>
             <tr>
-                <td>Νίκος Παπαδόπουλος</td>
+                <td>Κωνσταντίνος Ισίδωρος</td>
                 <td>17.429</td>
                 <td>ΟΔΟΝΤΙΑΤΡΙΚΗΣ</td>
             </tr>
