Pics in Community, Index Banner
Added pics in Community's "Student Party" that you can open and close.

Came up with name and made respective banner for the index page.

Added favicon.

PS: Banner looks pretty, ik it's kind of an overkill with the blue but I couldnt make it fit the aesthetic without it looking cheap... Better overkill than KITSCH.

PS2: Static blue banner now covers carousel. Don't have time to fix it.

--- a/pages/koinothta.html
+++ b/pages/koinothta.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Description</title>
+    <title>Κοινότητα | Φροντιστήρια Κορυφή</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,9 @@
 
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
+    <script defer src="C:\Ifigeneia Rapti\my_cool_thing\scripts\script_enlarge_pics.js"></script>
+    <link rel="icon" type="image/png" href="../pictures/icon.png">
+
 </head>
 
 <body>
@@ -410,8 +413,26 @@
             εμπνέουν.
         </p>
 
-        <p>Παρακάτω, φωτογραφικό υλικό από το αξέχαστο πάρτυ μας!
-        </p>
+        <img src="../pictures/party1_sign.png" width="20%" height="auto" alt="Click to enlarge"
+            class="open-img cropped-img" id="open-img1" style="cursor: pointer;">
+
+        <img src="../pictures/party2_people.png" width="20%" height="auto" alt="Click to enlarge"
+            class="open-img cropped-img" id=" open-img2" style="cursor: pointer;">
+
+
+        <img src="../pictures/party3_table.png" width="20%" height="auto" alt="Click to enlarge"
+            class="open-img cropped-img" id="open-img3" style="cursor: pointer;">
+
+
+
+        <div id="popup">
+            <button id="close">x</button>
+            <img src="" id="popup-img" alt="Popup Image">
+        </div>
+
+
+
+
 
     </div>
     <div class="box-euk">
