--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>Αρχική | Φροντιστήρια Κορυφή</title>
     <link rel="stylesheet" href="./styles/general.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,12 +14,15 @@
         rel="stylesheet">
 
     <script defer src="./scripts/script.js"></script>
+    <link rel="icon" type="image/png" href="pictures/icon.png">
 
 </head>
 
 <body>
     <iframe src="pages/navbar.html" class="navbar" id="navbar_iframe"></iframe>
-    <h1>Welcome to our website!</h1>
+
+
+    <img src="pictures/name_banner1.jpg" width="100%" height="auto" alt="Φροντιστήρια Κορυφή">
 
     <div class="banner">
         <div class="banner-images">
@@ -27,6 +30,16 @@
             <img src="pictures/banner_pic_2_students.jpg" alt="Students">
         </div>
     </div>
+
+    <!--<p>Im so angry this isnt working
+        TESTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
+    <p>ttttttttttttttttttttttttttttttttttttt</p>TTTTTTTTTTTTTTTT<p>dfsghdsdddddddddddddddddddd</p>TTTTTTTTTTTTTTTTTT<p>
+        55555555555555555555555555555555555555555555555555555555555555555555555555555</p>TTTTTTTTTTTT<p>
+        ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
+    TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
+    </p>-->
+
+
 
     <iframe src="pages/footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
