--- a/pages/classes.html
+++ b/pages/classes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Μαθήματα | Φροντιστήρια Κορυφή</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
+    <link rel="icon" type="image/png" href="../pictures/icon.png">
+
 </head>
 
 <body>
