--- a/pages/classes.html
+++ b/pages/classes.html
@@ -24,11 +24,11 @@
     <iframe src="./navbar.html" class="navbar" id="navbar_iframe"></iframe>
 
     <div id="lessons_background">
-        <h1>Μαθηματικά</h1>
+        <h1 class="classes_styling">Μαθηματικά</h1 class="classes_styling">
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
+                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
@@ -41,7 +41,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριθμητική</h2>
+                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
@@ -54,7 +54,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αναλυτική γεωμετρία</h2>
+                <h2 class="classes_styling">Αναλυτική γεωμετρία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculator.png">
@@ -67,7 +67,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Μονομερή ανάλυση</h2>
+                <h2 class="classes_styling">Μονομερή ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
@@ -80,7 +80,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Στατιστική</h2>
+                <h2 class="classes_styling">Στατιστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/graph.png">
@@ -92,11 +92,11 @@
             </div>
         </div>
 
-        <h1>Λογιστική</h1>
+        <h1 class="classes_styling">Λογιστική</h1 class="classes_styling">
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
+                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
@@ -109,7 +109,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριθμητική</h2>
+                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
@@ -120,11 +120,11 @@
                 </div>
             </div>
         </div>
-        <h1>Οικονομικά</h1>
+        <h1 class="classes_styling">Οικονομικά</h1 class="classes_styling">
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
+                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
@@ -137,7 +137,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριθμητική</h2>
+                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
@@ -150,7 +150,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αναλυτική γεωμετρία</h2>
+                <h2 class="classes_styling">Αναλυτική γεωμετρία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculator.png">
@@ -163,7 +163,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Στατιστική</h2>
+                <h2 class="classes_styling">Στατιστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/graph.png">
@@ -174,11 +174,11 @@
                 </div>
             </div>
         </div>
-        <h1>Βιολογία</h1>
+        <h1 class="classes_styling">Βιολογία</h1 class="classes_styling">
         <hr>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
+                <h2 class="classes_styling">Αριημητική ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/abacus.png">
@@ -191,7 +191,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αριθμητική</h2>
+                <h2 class="classes_styling">Αριθμητική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/book.png">
@@ -204,7 +204,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Αναλυτική γεωμετρία</h2>
+                <h2 class="classes_styling">Αναλυτική γεωμετρία</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculator.png">
@@ -217,7 +217,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Μονομερή ανάλυση</h2>
+                <h2 class="classes_styling">Μονομερή ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
@@ -230,7 +230,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Μονομερή ανάλυση</h2>
+                <h2 class="classes_styling">Μονομερή ανάλυση</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/calculus.png">
@@ -243,7 +243,7 @@
         </div>
         <div class=lesson_outer>
             <div class=centerer_div>
-                <h2>Στατιστική</h2>
+                <h2 class="classes_styling">Στατιστική</h2 class="classes_styling">
                 <div class="lesson">
                     <div class="lesson_img">
                         <img src="../images/math/graph.png">
