styles in contact

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,9 @@
         <a
             href="https://www.shutterstock.com/el/explore/eu-stock-assets?cr=ec&ds_ag=FF%3DBrand+Shutterstock_Exact_AU%3DProspecting&ds_agid=58700001998455752&ds_cid=71700000017552466&ds_eid=700000001517862&gad_source=1&gclid=Cj0KCQiA4fi7BhC5ARIsAEV1YiaAPk475yrO0kEFL0mZJyTAW0F5wtDR9im2NpMv5Sp45yz8Xys6fKIaAi0iEALw_wcB&gclsrc=aw.ds&kw=shutterstock&pl=PPC_GOO_GR_BD-691107850738&utm_campaign=CO%3DGR_LG%3DEN_BU%3DIMG_AD%3DBRAND_TS%3Dlggeneric_RG%3DEUAF_AB%3DACQ_CH%3DSEM_OG%3DCONV_PB%3DGoogle&utm_medium=cpc&utm_source=GOOGLE/">Shutterstock</a>
         <br>
-        <a href="https://pixabay.com/">Pixabay</a>
+        <a href="https://pixabay.com/">Pixabay</a> <br>
+        <a href="https://www.freevector.com/hand-drawn-mathematics-element-vectors-25214">Free Vector</a>
+
 
         <p>Συνεργάστηκαν οι:</p>
 
