Revert "Classes page + tweaks"
This reverts commit bfe5558615c05f845ad4a59282b371cac12652df.

--- a/pages/classes.html
+++ b/pages/classes.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Μαθήματα | Φροντιστήρια Κορυφή</title>
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="../styles/general.css">
     <script defer src="../scripts/script.js"></script>
@@ -23,239 +21,10 @@
 <body>
     <iframe src="./navbar.html" class="navbar" id="navbar_iframe"></iframe>
 
-    <div id="lessons_background">
-        <h1>Μαθηματικά</h1>
-        <hr>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριθμητική</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αναλυτική γεωμετρία</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/calculator.png">
-                        <a>Επίπεδο: Λυκείου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Μονομερή ανάλυση</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/calculus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Στατιστική</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/graph.png">
-                        <a>Επίπεδο: Γυμνασίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h1>Λογιστική</h1>
-        <hr>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριθμητική</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <h1>Οικονομικά</h1>
-        <hr>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριθμητική</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αναλυτική γεωμετρία</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/calculator.png">
-                        <a>Επίπεδο: Λυκείου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Στατιστική</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/graph.png">
-                        <a>Επίπεδο: Γυμνασίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <h1>Βιολογία</h1>
-        <hr>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριημητική ανάλυση</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/abacus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αριθμητική</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/book.png">
-                        <a>Επίπεδο: Δημοτικού</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Αναλυτική γεωμετρία</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/calculator.png">
-                        <a>Επίπεδο: Λυκείου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Μονομερή ανάλυση</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/calculus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Μονομερή ανάλυση</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/calculus.png">
-                        <a>Επίπεδο: Πανεπιστημίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=lesson_outer>
-            <div class=centerer_div>
-                <h2>Στατιστική</h2>
-                <div class="lesson">
-                    <div class="lesson_img">
-                        <img src="../images/math/graph.png">
-                        <a>Επίπεδο: Γυμνασίου</a>
-                        <a>Kaθηγητής: Άντρος Γιαννόπουλος</a>
-                        <a href="./class_details.html" class="read_more">Μάθετε περισσότερα</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <h1>Δημοτικό</h1>
+    <h1>Γυμνάσιο</h1>
+    <h1>Λύκειο</h1>
+    <h1>Πανεπιστημιακό επίπεδο</h1>
 
     <iframe src="./footer.html" class="footer" id="footer_iframe"></iframe>
 </body>
