--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -2,13 +2,11 @@
     <link rel="stylesheet" href="../styles/navbar.css">
     <script defer src="../scripts/iframe_script_navbar.js"></script>
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +18,7 @@
             <p>Μαθήματα</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./class_details.html'">
-            <p>Λεπτομέρεις μαθημάτων</p>
+            <p>Class Details</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./koinothta.html'">
             <p>Κοινότητα</p>
