Revert "Merge branch 'dev' into dev-george"
This reverts commit 80948ff75051d348e46f158df3fc8d4f1e29ea0d, reversing
changes made to 5ed018246dbfba1de1d624a87f49febed009fa7d.

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -1,6 +1,8 @@
 <head>
     <link rel="stylesheet" href="../styles/navbar.css">
     <script defer src="../scripts/iframe_script_navbar.js"></script>
+
+
 </head>
 
 <body>
@@ -12,7 +14,7 @@
             <p>Μαθήματα</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./class_details.html'">
-            <p>Class Details</p>
+            <p>Λεπτομέρεις μαθημάτων</p>
         </button>
         <button class="button" onclick="window.parent.location.href='./koinothta.html'">
             <p>Κοινότητα</p>
